--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -356,7 +356,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="자유코딩"
+                    android:text="자유체험"
                     android:textColor="#606060"
                     android:textStyle="bold"
                     app:scale_height="105"
@@ -399,7 +399,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="미션"
+                    android:text="문제풀이"
                     android:textColor="#606060"
                     android:textStyle="bold"
                     app:scale_height="105"
